[gd_scene load_steps=116 format=3 uid="uid://c8hl803hm51hg"]

[ext_resource type="Script" uid="uid://bvnmgi7w83xqn" path="res://scripts/enemies/Enemies.gd" id="1_0sqes"]
[ext_resource type="Texture2D" uid="uid://vux6wg3i0nx" path="res://assets/sprites/enemies/Goblin/Gob_2/Attack_full.png" id="1_r0sh3"]
[ext_resource type="Texture2D" uid="uid://cvy5wlimhogau" path="res://assets/sprites/enemies/Goblin/Gob_2/Death_full.png" id="2_cau50"]
[ext_resource type="Texture2D" uid="uid://6hlf0pjprqca" path="res://assets/sprites/enemies/Goblin/Gob_2/Hurt_full.png" id="3_2sr7c"]
[ext_resource type="Texture2D" uid="uid://dl6h03peshc8s" path="res://assets/sprites/enemies/Goblin/Gob_2/Idle_full.png" id="4_0sqes"]
[ext_resource type="AudioStream" uid="uid://bd4vcado7ev2m" path="res://assets/audio/effects/Goblin/running-1-6846.mp3" id="4_kq2ox"]
[ext_resource type="AudioStream" uid="uid://3xvh1xpkkhws" path="res://assets/audio/effects/Goblin/goblin-scream-87564.mp3" id="5_0sqes"]
[ext_resource type="Texture2D" uid="uid://b77nuteavox4q" path="res://assets/sprites/enemies/Goblin/Gob_2/Run_full.png" id="5_roy8g"]
[ext_resource type="AudioStream" uid="uid://d3chqfvqtgcw5" path="res://assets/audio/effects/Goblin/goblin-death-6729.mp3" id="6_roy8g"]
[ext_resource type="Texture2D" uid="uid://q81m7m7sdvdf" path="res://assets/sprites/enemies/Goblin/Gob_2/Walk_full.png" id="6_yfmvg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yfmvg"]
radius = 18.0
height = 58.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ab80d"]
atlas = ExtResource("1_r0sh3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcirw"]
atlas = ExtResource("1_r0sh3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8wbi"]
atlas = ExtResource("1_r0sh3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvq6i"]
atlas = ExtResource("1_r0sh3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8666"]
atlas = ExtResource("1_r0sh3")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhkgx"]
atlas = ExtResource("1_r0sh3")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7m5gh"]
atlas = ExtResource("1_r0sh3")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8ijx"]
atlas = ExtResource("1_r0sh3")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_va7ei"]
atlas = ExtResource("1_r0sh3")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q21ok"]
atlas = ExtResource("1_r0sh3")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7isk"]
atlas = ExtResource("1_r0sh3")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj3ul"]
atlas = ExtResource("1_r0sh3")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv6fd"]
atlas = ExtResource("1_r0sh3")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajeye"]
atlas = ExtResource("1_r0sh3")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cscv"]
atlas = ExtResource("1_r0sh3")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig4op"]
atlas = ExtResource("2_cau50")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_436tq"]
atlas = ExtResource("2_cau50")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp7b6"]
atlas = ExtResource("2_cau50")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bpjp"]
atlas = ExtResource("2_cau50")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_smmbv"]
atlas = ExtResource("2_cau50")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysowd"]
atlas = ExtResource("2_cau50")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6e21"]
atlas = ExtResource("2_cau50")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5f5n"]
atlas = ExtResource("2_cau50")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k68rc"]
atlas = ExtResource("2_cau50")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_roygh"]
atlas = ExtResource("2_cau50")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmtev"]
atlas = ExtResource("2_cau50")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8mjp"]
atlas = ExtResource("2_cau50")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uctbs"]
atlas = ExtResource("2_cau50")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2qx3"]
atlas = ExtResource("2_cau50")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj3v4"]
atlas = ExtResource("2_cau50")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_58qlo"]
atlas = ExtResource("2_cau50")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fndnc"]
atlas = ExtResource("2_cau50")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ijnv"]
atlas = ExtResource("2_cau50")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhlxp"]
atlas = ExtResource("3_2sr7c")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5bl4"]
atlas = ExtResource("3_2sr7c")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuixn"]
atlas = ExtResource("3_2sr7c")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q80m5"]
atlas = ExtResource("3_2sr7c")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2skgb"]
atlas = ExtResource("3_2sr7c")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoi1n"]
atlas = ExtResource("3_2sr7c")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg076"]
atlas = ExtResource("3_2sr7c")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qg0y"]
atlas = ExtResource("3_2sr7c")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7exno"]
atlas = ExtResource("3_2sr7c")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2c5u"]
atlas = ExtResource("3_2sr7c")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_35v2f"]
atlas = ExtResource("3_2sr7c")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0s06"]
atlas = ExtResource("3_2sr7c")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1aywl"]
atlas = ExtResource("4_0sqes")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p87y1"]
atlas = ExtResource("4_0sqes")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnl2r"]
atlas = ExtResource("4_0sqes")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fbjx"]
atlas = ExtResource("4_0sqes")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cwve"]
atlas = ExtResource("4_0sqes")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtwjs"]
atlas = ExtResource("4_0sqes")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyxhv"]
atlas = ExtResource("4_0sqes")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1cxl"]
atlas = ExtResource("4_0sqes")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hxoc"]
atlas = ExtResource("4_0sqes")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8bek"]
atlas = ExtResource("4_0sqes")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_unitw"]
atlas = ExtResource("4_0sqes")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uam7f"]
atlas = ExtResource("4_0sqes")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_er4tn"]
atlas = ExtResource("5_roy8g")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw4jj"]
atlas = ExtResource("5_roy8g")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_24jkd"]
atlas = ExtResource("5_roy8g")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3om4"]
atlas = ExtResource("5_roy8g")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkbb1"]
atlas = ExtResource("5_roy8g")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixwjc"]
atlas = ExtResource("5_roy8g")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7wxv"]
atlas = ExtResource("5_roy8g")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh6vt"]
atlas = ExtResource("5_roy8g")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulnx8"]
atlas = ExtResource("5_roy8g")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3a0p"]
atlas = ExtResource("5_roy8g")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hspq0"]
atlas = ExtResource("5_roy8g")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uum40"]
atlas = ExtResource("5_roy8g")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gc5hw"]
atlas = ExtResource("5_roy8g")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_544a4"]
atlas = ExtResource("5_roy8g")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2e6c"]
atlas = ExtResource("5_roy8g")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ils5"]
atlas = ExtResource("5_roy8g")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wskf"]
atlas = ExtResource("5_roy8g")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh6gk"]
atlas = ExtResource("5_roy8g")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_otuo8"]
atlas = ExtResource("5_roy8g")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ud3t"]
atlas = ExtResource("5_roy8g")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_epfhn"]
atlas = ExtResource("5_roy8g")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_715jy"]
atlas = ExtResource("5_roy8g")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei3mj"]
atlas = ExtResource("5_roy8g")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_115sn"]
atlas = ExtResource("5_roy8g")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_35m2j"]
atlas = ExtResource("6_yfmvg")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i11oe"]
atlas = ExtResource("6_yfmvg")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u52vi"]
atlas = ExtResource("6_yfmvg")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldkdw"]
atlas = ExtResource("6_yfmvg")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhovp"]
atlas = ExtResource("6_yfmvg")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xicgx"]
atlas = ExtResource("6_yfmvg")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdogo"]
atlas = ExtResource("6_yfmvg")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dlk5"]
atlas = ExtResource("6_yfmvg")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_al5ug"]
atlas = ExtResource("6_yfmvg")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip5eb"]
atlas = ExtResource("6_yfmvg")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwecq"]
atlas = ExtResource("6_yfmvg")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2kyt"]
atlas = ExtResource("6_yfmvg")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnk0g"]
atlas = ExtResource("6_yfmvg")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xbno"]
atlas = ExtResource("6_yfmvg")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dec0c"]
atlas = ExtResource("6_yfmvg")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_carfe"]
atlas = ExtResource("6_yfmvg")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt7n1"]
atlas = ExtResource("6_yfmvg")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3foo"]
atlas = ExtResource("6_yfmvg")
region = Rect2(320, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7exno"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab80d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcirw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8wbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvq6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8666")
}],
"loop": false,
"name": &"attack_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhkgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m5gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8ijx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va7ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q21ok")
}],
"loop": false,
"name": &"attack_side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7isk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj3ul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv6fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajeye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cscv")
}],
"loop": false,
"name": &"attack_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig4op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_436tq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp7b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bpjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smmbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysowd")
}],
"loop": false,
"name": &"death_down",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6e21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5f5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k68rc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roygh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmtev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8mjp")
}],
"loop": false,
"name": &"death_side",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uctbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2qx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj3v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58qlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fndnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ijnv")
}],
"loop": false,
"name": &"death_up",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhlxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5bl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuixn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q80m5")
}],
"loop": false,
"name": &"hurt_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2skgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoi1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg076")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qg0y")
}],
"loop": false,
"name": &"hurt_side",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7exno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2c5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35v2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0s06")
}],
"loop": false,
"name": &"hurt_up",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1aywl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p87y1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnl2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fbjx")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cwve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtwjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyxhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1cxl")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hxoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8bek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unitw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uam7f")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_er4tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw4jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24jkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3om4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkbb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixwjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7wxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh6vt")
}],
"loop": true,
"name": &"run_down",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulnx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3a0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hspq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uum40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gc5hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_544a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2e6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ils5")
}],
"loop": true,
"name": &"run_side",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wskf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh6gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otuo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ud3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epfhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_715jy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei3mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_115sn")
}],
"loop": true,
"name": &"run_up",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_35m2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i11oe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u52vi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldkdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhovp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xicgx")
}],
"loop": true,
"name": &"walk_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdogo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dlk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_al5ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip5eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwecq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2kyt")
}],
"loop": true,
"name": &"walk_side",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnk0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xbno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dec0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_carfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt7n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3foo")
}],
"loop": true,
"name": &"walk_up",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_l2c5u"]
radius = 380.10657

[sub_resource type="CircleShape2D" id="CircleShape2D_35v2f"]
radius = 51.009804

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x0s06"]
bg_color = Color(0, 0, 0, 0.18431373)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1aywl"]
bg_color = Color(0.75686276, 0, 0.09411765, 1)

[node name="GoblinLvL2" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_0sqes")
speed = 170
max_health = 425
attack_cooldown = 0.9
xp_reward = 75
crit_chance = 0.09

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, -57)
shape = SubResource("CapsuleShape2D_yfmvg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-0.6666667, -0.6666666)
scale = Vector2(1.75, 1.75)
sprite_frames = SubResource("SpriteFrames_7exno")
animation = &"walk_up"
offset = Vector2(2.465, -31.195)

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -25)
shape = SubResource("CircleShape2D_l2c5u")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(5, -53)
shape = SubResource("CircleShape2D_35v2f")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
path_max_distance = 10.0
simplify_path = true

[node name="sfxWalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_kq2ox")
volume_db = 10.097
max_distance = 507.0
bus = &"SFX"

[node name="sfxHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_0sqes")
bus = &"SFX"

[node name="sfxDie" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_roy8g")
bus = &"SFX"

[node name="HpBar" type="ProgressBar" parent="."]
offset_left = -26.0
offset_top = -93.333336
offset_right = 28.0
offset_bottom = -87.333336
theme_override_styles/background = SubResource("StyleBoxFlat_x0s06")
theme_override_styles/fill = SubResource("StyleBoxFlat_1aywl")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
